--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -1,6 +1,7 @@
 @import "grid";
 @import "variables";
 @import "mixins";
-@import "media-queries";
 @import "navbar";
 @import "header";
+@import "media-queries";
+@import "keyframes";
