--- a/app/styles/less/mixins.less
+++ b/app/styles/less/mixins.less
@@ -4,3 +4,13 @@
 .text-center {
 	text-align:center;
 }
+.neon {
+	-webkit-animation: neon 1.5s ease-in-out infinite alternate;
+	-moz-animation: neon 1.5s ease-in-out infinite alternate;
+	animation: neon 1.5s ease-in-out infinite alternate; 
+}
+.neonsvg {
+	-webkit-animation: neonsvg 1.5s ease-in-out infinite alternate;
+	-moz-animation: neonsvg 1.5s ease-in-out infinite alternate;
+	animation: neonsvg 1.5s ease-in-out infinite alternate; 
+}
