--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -73,62 +73,15 @@ html {
 .text-center {
   text-align: center;
 }
-@media screen and (max-width: 600px) {
-  nav {
-    height: auto;
-  }
-  nav ul {
-    width: 100%;
-    display: block;
-    height: auto;
-  }
-  nav ul li {
-    width: 50%;
-    float: left;
-    position: relative;
-  }
-  nav ul li a {
-    padding: 0;
-  }
-  nav a {
-    text-align: left;
-    width: 100%;
-    text-indent: 25px;
-  }
+.neon {
+  -webkit-animation: neon 1.5s ease-in-out infinite alternate;
+  -moz-animation: neon 1.5s ease-in-out infinite alternate;
+  animation: neon 1.5s ease-in-out infinite alternate;
 }
-@media only screen and (max-width: 480px) {
-  nav {
-    border-bottom: 0;
-  }
-  nav ul {
-    display: none;
-    height: auto;
-  }
-  nav ul li {
-    float: none;
-  }
-  nav a#pull {
-    display: block;
-    width: 100%;
-  }
-  nav a#pull:after {
-    content: "";
-    background: url('https://www.neffheadwear.com/sites/all/themes/neff_foundation/images/svg-offcanvas-nav-icon.svg') no-repeat;
-    background-size: contain;
-    width: 30px;
-    height: 30px;
-    display: inline-block;
-    position: absolute;
-    right: 15px;
-    top: 10px;
-  }
-}
-@media only screen and (max-width: 320px) {
-  nav li {
-    display: block;
-    float: none;
-    width: 100%;
-  }
+.neonsvg {
+  -webkit-animation: neonsvg 1.5s ease-in-out infinite alternate;
+  -moz-animation: neonsvg 1.5s ease-in-out infinite alternate;
+  animation: neonsvg 1.5s ease-in-out infinite alternate;
 }
 nav {
   height: 40px;
@@ -167,7 +120,7 @@ nav li:last-child a {
 }
 nav a:hover,
 nav a:active {
-  background-color: #8c99a4;
+  background: rgba(0, 0, 0, 0.4);
 }
 nav a#pull {
   display: none;
@@ -186,7 +139,7 @@ nav a#pull .svg-icon {
     height: auto;
   }
   nav ul {
-    width: 100%;
+    width: 100vw;
     display: block;
     height: auto;
   }
@@ -196,8 +149,7 @@ nav a#pull .svg-icon {
     position: relative;
   }
   nav li a {
-    border-bottom: 1px solid #576979;
-    border-right: 1px solid #576979;
+    border: 0;
     padding: 0;
   }
   nav a {
@@ -206,10 +158,10 @@ nav a#pull .svg-icon {
     text-indent: 25px;
   }
 }
-/*Styles for screen 515px and lower*/
 @media only screen and (max-width: 480px) {
   nav {
     border-bottom: 0;
+    background: rgba(59, 61, 66, 0.9);
   }
   nav ul {
     display: none;
@@ -217,6 +169,11 @@ nav a#pull .svg-icon {
   }
   nav li {
     float: none;
+  }
+  nav li a {
+    width: 85%;
+    margin-left: -1.5rem;
+    border-bottom: 1px solid lightgrey;
   }
   nav a#pull {
     display: block;
@@ -280,15 +237,15 @@ header .header-img {
   max-height: 9rem;
   max-width: 9rem;
   vertical-align: middle;
-  overflow: hidden;
 }
 .header-text-and-logo .header-text {
   color: white;
 }
 .header-text-and-logo .header-text h1 {
-  font-size: 3.3rem;
+  font-size: 3.3em;
   margin: 0;
   font-family: 'coolvetica_rgregular';
+  font-weight: normal;
 }
 .header-text-and-logo .header-text p.tagline {
   text-transform: uppercase;
@@ -303,6 +260,16 @@ header .header-img {
   left: 0;
   background-color: rgba(255, 255, 255, 0.2);
   height: 1.2rem;
+  -webkit-transition: height 0.3s;
+  transition: height 0.3s;
+}
+.scroll-down:hover {
+  height: 1.5rem;
+}
+.scroll-down:hover .semi-circle {
+  height: 2.3rem;
+  width: 4.5rem;
+  margin-top: -2.3rem;
 }
 .scroll-down .semi-circle {
   height: 2rem;
@@ -311,6 +278,13 @@ header .header-img {
   margin-top: -2rem;
   border-radius: 90px 90px 0 0;
   background-color: rgba(255, 255, 255, 0.2);
+  -webkit-transition: height 0.3s, width 0.3s, margin-top 0.3s;
+  transition: height 0.3s, width 0.3s, margin-top 0.3s;
+}
+.scroll-down .semi-circle.semi-circle-hover {
+  height: 2.3rem;
+  width: 4.5rem;
+  margin-top: -2.3rem;
 }
 .scroll-down .chevron {
   height: 1.6rem;
@@ -335,4 +309,90 @@ section {
   height: 40rem;
   padding: 5rem;
   text-align: center;
+}
+/*@media screen and (max-width: 600px) {
+	nav { 
+  		height: auto;
+  		ul {
+  			width: 100%;
+	  		display: block;
+	  		height: auto;
+  			li {
+  				width: 50%;
+		  		float: left;
+		  		position: relative;
+  				a {
+					//border-bottom: 1px solid #576979;
+					//border-right: 1px solid #576979;
+					padding:0;
+  				}
+  			}
+  		}
+  		a {
+			text-align: left;
+		  	width: 100%;
+		  	text-indent: 25px;
+  		}
+  	}
+}
+
+@media only screen and (max-width : 480px) {
+	nav {
+		border-bottom: 0;
+		ul {
+			display: none;
+			height: auto;
+			li {
+				float:none;
+			}
+		}
+		a {
+			&#pull {
+				display: block;
+				width: 100%;
+				position:fixed;
+				&:after {
+					content:"";
+					background: url('https://www.neffheadwear.com/sites/all/themes/neff_foundation/images/svg-offcanvas-nav-icon.svg') no-repeat;
+					background-size:contain;
+					width: 30px;
+					height: 30px;
+					display: inline-block;
+					position: absolute;
+					right: 15px;
+					top: 10px;
+				}
+			}
+		}
+	}
+}
+
+@media only screen and (max-width : 320px) {
+	nav {
+		li {
+			display: block;
+			float: none;
+			width: 100%;
+			a {
+				//border-bottom: 1px solid #576979;
+			}
+		}
+	}
+}*/@-webkit-keyframes neon {
+  from {
+    text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff;
+  }
+  to {
+    text-shadow: 0 0 5px #ffffff, 0 0 10px #ffffff;
+  }
+}
+@-webkit-keyframes neonsvg {
+  from {
+    -webkit-filter: drop-shadow(0 0 10px #ffffff);
+    filter: drop-shadow(0 0 10px #ffffff);
+  }
+  to {
+    -webkit-filter: drop-shadow(0 0 5px #ffffff);
+    filter: drop-shadow(0 0 5px #ffffff);
+  }
 }
