--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -1,7 +1,7 @@
 @import "grid";
-@import "variables";
 @import "mixins";
 @import "navbar";
-@import "header";
-@import "media-queries";
+@import "home-header";
+@import "variables";
+@import "media-queries-navbar";
 @import "keyframes";
