--- a/app/styles/less/mixins.less
+++ b/app/styles/less/mixins.less
@@ -7,10 +7,36 @@
 .neon {
 	-webkit-animation: neon 1.5s ease-in-out infinite alternate;
 	-moz-animation: neon 1.5s ease-in-out infinite alternate;
+	-o-animation: neon 1.5s ease-in-out infinite alternate;
+	-ms-animation: neon 1.5s ease-in-out infinite alternate;
 	animation: neon 1.5s ease-in-out infinite alternate; 
 }
 .neonsvg {
-	-webkit-animation: neonsvg 1.5s ease-in-out infinite alternate;
-	-moz-animation: neonsvg 1.5s ease-in-out infinite alternate;
-	animation: neonsvg 1.5s ease-in-out infinite alternate; 
+	-webkit-animation: neonsvg 1.1s ease-in-out infinite alternate;
+	-moz-animation: neonsvg 1.1s ease-in-out infinite alternate;
+	-o-animation: neonsvg 1.1s ease-in-out infinite alternate;
+	-ms-animation: neonsvg 1.1s ease-in-out infinite alternate;
+	animation: neonsvg 1.1s ease-in-out infinite alternate; 
+}
+.icon-nudge {
+	-webkit-animation: icon-nudge 0.5s ease-in-out alternate;
+	-moz-animation: icon-nudge 0.5s ease-in-out alternate;
+	-o-animation: icon-nudge 0.5s ease-in-out alternate;
+	-ms-animation: icon-nudge 0.5s ease-in-out alternate;
+	animation: icon-nudge 0.5s ease-in-out alternate; 
+}
+.plug-rotate {
+	-webkit-transition-duration: 0.5s;
+	-moz-transition-duration: 0.5s;
+	-o-transition-duration: 0.5s;
+	transition-duration: 0.5s;
+	-webkit-transition-property: -webkit-transform;
+	-moz-transition-property: -moz-transform;
+	-o-transition-property: -o-transform;
+	transition-property: transform;
+}
+.plug-rotated {
+	-webkit-transform:rotate(45deg);
+    -moz-transform:rotate(45deg);
+    -o-transform:rotate(45deg);
 }
