--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -76,15 +76,41 @@ html {
 .neon {
   -webkit-animation: neon 1.5s ease-in-out infinite alternate;
   -moz-animation: neon 1.5s ease-in-out infinite alternate;
+  -o-animation: neon 1.5s ease-in-out infinite alternate;
+  -ms-animation: neon 1.5s ease-in-out infinite alternate;
   animation: neon 1.5s ease-in-out infinite alternate;
 }
 .neonsvg {
-  -webkit-animation: neonsvg 1.5s ease-in-out infinite alternate;
-  -moz-animation: neonsvg 1.5s ease-in-out infinite alternate;
-  animation: neonsvg 1.5s ease-in-out infinite alternate;
+  -webkit-animation: neonsvg 1.1s ease-in-out infinite alternate;
+  -moz-animation: neonsvg 1.1s ease-in-out infinite alternate;
+  -o-animation: neonsvg 1.1s ease-in-out infinite alternate;
+  -ms-animation: neonsvg 1.1s ease-in-out infinite alternate;
+  animation: neonsvg 1.1s ease-in-out infinite alternate;
+}
+.icon-nudge {
+  -webkit-animation: icon-nudge 0.5s ease-in-out alternate;
+  -moz-animation: icon-nudge 0.5s ease-in-out alternate;
+  -o-animation: icon-nudge 0.5s ease-in-out alternate;
+  -ms-animation: icon-nudge 0.5s ease-in-out alternate;
+  animation: icon-nudge 0.5s ease-in-out alternate;
+}
+.plug-rotate {
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  -webkit-transition-property: -webkit-transform;
+  -moz-transition-property: -moz-transform;
+  -o-transition-property: -o-transform;
+  transition-property: transform;
+}
+.plug-rotated {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
 }
 nav {
-  height: 40px;
+  height: 2.5rem;
   width: 100%;
   background: rgba(0, 0, 0, 0.4);
   position: fixed;
@@ -98,116 +124,137 @@ nav ul {
 }
 nav li {
   display: inline;
+  border-right: 1px solid white;
+}
+nav li:last-child {
+  border-right: 0;
+}
+nav li a {
+  padding-left: 4rem;
+  padding-right: 4rem;
+  font-size: 0.9em;
+  font-family: 'bauframedium';
 }
 nav a {
   color: white;
   display: inline-block;
   text-align: center;
   text-decoration: none;
-  line-height: 40px;
+  line-height: 2.5rem;
+  -webkit-transition: background 0.2s;
+  transition: background 0.2s;
+  -moz-transition: background 0.2s;
+  -o-transition: background 0.2s;
+  -ms-transition: background 0.2s;
 }
-nav li a {
-  border-right: 1px solid white;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  padding-left: 4rem;
-  padding-right: 4rem;
-  font-size: 0.9em;
+nav a:hover {
+  background: rgba(0, 0, 0, 0.4);
 }
-nav li:last-child a {
-  border-right: 0;
-}
-nav a:hover,
 nav a:active {
   background: rgba(0, 0, 0, 0.4);
 }
-nav a#pull {
+nav #nav-toggle {
   display: none;
+  height: 2.5rem;
+  background: rgba(0, 0, 0, 0.3);
+  -webkit-transition: background 0.3s;
+  transition: background 0.3s;
+  -moz-transition: background 0.3s;
+  -o-transition: background 0.3s;
+  -ms-transition: background 0.3s;
 }
-nav a#pull .svg-icon {
+nav #nav-toggle:hover {
+  background: rgba(0, 0, 0, 0.4);
+}
+nav #nav-toggle .svg-icon-nav {
   display: inline-block;
   position: relative;
+  float: left;
   max-width: 2rem;
   max-height: 2rem;
+  min-width: 2rem;
+  min-height: 2rem;
   vertical-align: middle;
-  margin-left: -2rem;
+  margin-left: -1rem;
+  margin-top: 0.2rem;
 }
-/*Styles for screen 600px and lower*/
-@media screen and (max-width: 600px) {
-  nav {
-    height: auto;
-  }
-  nav ul {
-    width: 100vw;
-    display: block;
-    height: auto;
-  }
-  nav li {
-    width: 50%;
-    float: left;
-    position: relative;
-  }
-  nav li a {
-    border: 0;
-    padding: 0;
-  }
-  nav a {
-    text-align: left;
-    width: 100%;
-    text-indent: 25px;
-  }
+nav #nav-toggle .svg-icon-nav:hover {
+  -webkit-animation: icon-nudge 0.5s ease-in-out alternate;
+  -moz-animation: icon-nudge 0.5s ease-in-out alternate;
+  -o-animation: icon-nudge 0.5s ease-in-out alternate;
+  -ms-animation: icon-nudge 0.5s ease-in-out alternate;
+  animation: icon-nudge 0.5s ease-in-out alternate;
 }
-@media only screen and (max-width: 480px) {
-  nav {
-    border-bottom: 0;
-    background: rgba(59, 61, 66, 0.9);
-  }
-  nav ul {
-    display: none;
-    height: auto;
-  }
-  nav li {
-    float: none;
-  }
-  nav li a {
-    width: 85%;
-    margin-left: -1.5rem;
-    border-bottom: 1px solid lightgrey;
-  }
-  nav a#pull {
-    display: block;
-    width: 100%;
-    position: fixed;
-  }
-  nav a#pull:after {
-    content: "";
-    background: url('https://www.neffheadwear.com/sites/all/themes/neff_foundation/images/svg-offcanvas-nav-icon.svg') no-repeat;
-    background-size: contain;
-    width: 30px;
-    height: 30px;
-    display: inline-block;
-    position: absolute;
-    right: 15px;
-    top: 10px;
-  }
+nav #nav-toggle i {
+  float: right;
+  font-size: 2em;
+  vertical-align: middle;
+  line-height: 2.5rem;
+  margin-right: 0.7rem;
 }
-/*Smartphone*/
-@media only screen and (max-width: 320px) {
-  nav li {
-    display: block;
-    float: none;
-    width: 100%;
-  }
-  nav li a {
-    border-bottom: 1px solid #576979;
-  }
+/*
+
+nav {
+	height: 40px;
+	width: 100%;
+	background:rgba(0, 0, 0, 0.4);
+	position: fixed;
+	text-align:center;
+	z-index:1000;
 }
-.browsehappy {
+nav ul {
+	padding: 0;
+	margin-top:0;
+	margin-bottom:0;
+}
+nav li {
+	display: inline;
+}
+nav a {
+	color: white;
+	display: inline-block;
+	text-align: center;
+	text-decoration: none;
+	line-height: 40px;
+}
+nav li a {
+	border-right: 1px solid white;
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	padding-left:4rem;
+	padding-right:4rem;
+	font-size:0.9em;
+}
+nav li:last-child a {
+	border-right: 0;
+}
+nav a:hover, nav a:active {
+	background:rgba(0, 0, 0, 0.4);
+}
+nav a#nav-toggle {
+	display: none;
+	height:40px;
+	.svg-icon-nav {
+		display: inline-block;
+		position: relative;
+		float:left;
+		max-width: 2rem;
+		max-height:2rem;
+		vertical-align: middle;
+		margin-left:-1rem;
+		margin-top:0.2rem;
+	}
+}
+*/.browsehappy {
   margin: 0.2em 0;
   background: #ccc;
   color: #000;
   padding: 0.2em 0;
+}
+html,
+body {
+  font-size: 16px;
 }
 header {
   z-index: -100;
@@ -227,7 +274,7 @@ header .header-img {
 }
 .header-text-and-logo {
   width: 100%;
-  top: 20vh;
+  top: 25vh;
   z-index: -2;
 }
 .header-text-and-logo .svg-icon {
@@ -253,6 +300,30 @@ header .header-img {
   margin: 0;
   padding-top: 0.4rem;
 }
+.plug-and-socket {
+  position: absolute;
+  left: 0;
+  top: 7rem;
+  display: none;
+}
+.plug-and-socket .socket {
+  margin-left: 2rem;
+}
+.plug-and-socket .plug {
+  position: absolute;
+  margin-top: -4.3rem;
+  left: -6rem;
+  cursor: pointer;
+  cursor: hand;
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  -webkit-transition-property: -webkit-transform;
+  -moz-transition-property: -moz-transform;
+  -o-transition-property: -o-transform;
+  transition-property: transform;
+}
 .scroll-down {
   width: 100%;
   position: absolute;
@@ -262,6 +333,11 @@ header .header-img {
   height: 1.2rem;
   -webkit-transition: height 0.3s;
   transition: height 0.3s;
+  -moz-transition: height 0.3s;
+  -o-transition: height 0.3s;
+  -ms-transition: height 0.3s;
+  cursor: pointer;
+  cursor: hand;
 }
 .scroll-down:hover {
   height: 1.5rem;
@@ -280,6 +356,9 @@ header .header-img {
   background-color: rgba(255, 255, 255, 0.2);
   -webkit-transition: height 0.3s, width 0.3s, margin-top 0.3s;
   transition: height 0.3s, width 0.3s, margin-top 0.3s;
+  -moz-transition: height 0.3s, width 0.3s, margin-top 0.3s;
+  -o-transition: height 0.3s, width 0.3s, margin-top 0.3s;
+  -ms-transition: height 0.3s, width 0.3s, margin-top 0.3s;
 }
 .scroll-down .semi-circle.semi-circle-hover {
   height: 2.3rem;
@@ -304,81 +383,96 @@ header .header-img {
   height: 100vh;
 }
 section {
-  background-color: orange;
+  background-color: #ecf0f1;
   color: black;
   height: 40rem;
   padding: 5rem;
   text-align: center;
 }
-/*@media screen and (max-width: 600px) {
-	nav { 
-  		height: auto;
-  		ul {
-  			width: 100%;
-	  		display: block;
-	  		height: auto;
-  			li {
-  				width: 50%;
-		  		float: left;
-		  		position: relative;
-  				a {
-					//border-bottom: 1px solid #576979;
-					//border-right: 1px solid #576979;
-					padding:0;
-  				}
-  			}
-  		}
-  		a {
-			text-align: left;
-		  	width: 100%;
-		  	text-indent: 25px;
-  		}
-  	}
+@media screen and (min-width: 48rem) {
+  nav {
+    height: 5rem;
+  }
+  nav ul li a {
+    vertical-align: middle;
+    line-height: 5rem;
+    height: 5rem;
+    margin-left: 0.4rem;
+  }
 }
-
-@media only screen and (max-width : 480px) {
-	nav {
-		border-bottom: 0;
-		ul {
-			display: none;
-			height: auto;
-			li {
-				float:none;
-			}
-		}
-		a {
-			&#pull {
-				display: block;
-				width: 100%;
-				position:fixed;
-				&:after {
-					content:"";
-					background: url('https://www.neffheadwear.com/sites/all/themes/neff_foundation/images/svg-offcanvas-nav-icon.svg') no-repeat;
-					background-size:contain;
-					width: 30px;
-					height: 30px;
-					display: inline-block;
-					position: absolute;
-					right: 15px;
-					top: 10px;
-				}
-			}
-		}
-	}
+@media screen and (min-width: 40rem) {
+  nav ul li a:hover {
+    background: rgba(0, 0, 0, 0.1);
+  }
 }
-
-@media only screen and (max-width : 320px) {
-	nav {
-		li {
-			display: block;
-			float: none;
-			width: 100%;
-			a {
-				//border-bottom: 1px solid #576979;
-			}
-		}
-	}
-}*/@-webkit-keyframes neon {
+@media screen and (max-width: 48rem) {
+  nav {
+    height: auto;
+  }
+  nav ul {
+    width: 100vw;
+    display: block;
+    height: auto;
+  }
+  nav li {
+    width: 50%;
+    float: left;
+    position: relative;
+    border-right: 0;
+  }
+  nav li a {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    border-right: 1px solid rgba(255, 255, 255, 0.1);
+    padding: 0;
+  }
+  nav a {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 30rem) {
+  nav {
+    border-bottom: 0;
+    background: rgba(59, 61, 74, 0.93);
+  }
+  nav ul {
+    display: none;
+    height: auto;
+  }
+  nav li {
+    float: none;
+  }
+  nav li a {
+    width: 85%;
+    margin-left: -1.5rem;
+    border-bottom: 1px solid lightgrey;
+    border-right: 0;
+  }
+  nav li:last-child a {
+    margin-bottom: 2rem;
+  }
+  nav li:first-child a {
+    margin-top: 1rem;
+  }
+  nav a {
+    text-align: left;
+    text-indent: 25px;
+  }
+  nav #nav-toggle {
+    display: block;
+    position: fixed;
+  }
+  nav #nav-toggle i {
+    display: block;
+  }
+}
+@media only screen and (max-width: 20rem) {
+  nav li {
+    display: block;
+    float: none;
+    width: 100%;
+  }
+}
+@-webkit-keyframes neon {
   from {
     text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff;
   }
@@ -388,11 +482,100 @@ section {
 }
 @-webkit-keyframes neonsvg {
   from {
-    -webkit-filter: drop-shadow(0 0 10px #ffffff);
     filter: drop-shadow(0 0 10px #ffffff);
+    -webkit-filter: drop-shadow(0 0 10px #ffffff);
+    -moz-filter: drop-shadow(0 0 10px #ffffff);
+    -o-filter: drop-shadow(0 0 10px #ffffff);
+    -ms-filter: drop-shadow(0 0 10px #ffffff);
   }
   to {
-    -webkit-filter: drop-shadow(0 0 5px #ffffff);
     filter: drop-shadow(0 0 5px #ffffff);
+    -webkit-filter: drop-shadow(0 0 5px #ffffff);
+    -moz-filter: drop-shadow(0 0 5px #ffffff);
+    -o-filter: drop-shadow(0 0 5px #ffffff);
+    -ms-filter: drop-shadow(0 0 5px #ffffff);
+  }
+}
+@keyframes neon {
+  from {
+    text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff;
+  }
+  to {
+    text-shadow: 0 0 5px #ffffff, 0 0 10px #ffffff;
+  }
+}
+@keyframes neonsvg {
+  from {
+    filter: drop-shadow(0 0 10px #ffffff);
+    -webkit-filter: drop-shadow(0 0 10px #ffffff);
+    -moz-filter: drop-shadow(0 0 10px #ffffff);
+    -o-filter: drop-shadow(0 0 10px #ffffff);
+    -ms-filter: drop-shadow(0 0 10px #ffffff);
+  }
+  to {
+    filter: drop-shadow(0 0 5px #ffffff);
+    -webkit-filter: drop-shadow(0 0 5px #ffffff);
+    -moz-filter: drop-shadow(0 0 5px #ffffff);
+    -o-filter: drop-shadow(0 0 5px #ffffff);
+    -ms-filter: drop-shadow(0 0 5px #ffffff);
+  }
+}
+@-moz-keyframes neon {
+  from {
+    text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff;
+  }
+  to {
+    text-shadow: 0 0 5px #ffffff, 0 0 10px #ffffff;
+  }
+}
+@-moz-keyframes neonsvg {
+  from {
+    filter: drop-shadow(0 0 10px #ffffff);
+    -webkit-filter: drop-shadow(0 0 10px #ffffff);
+    -moz-filter: drop-shadow(0 0 10px #ffffff);
+    -o-filter: drop-shadow(0 0 10px #ffffff);
+    -ms-filter: drop-shadow(0 0 10px #ffffff);
+  }
+  to {
+    filter: drop-shadow(0 0 5px #ffffff);
+    -webkit-filter: drop-shadow(0 0 5px #ffffff);
+    -moz-filter: drop-shadow(0 0 5px #ffffff);
+    -o-filter: drop-shadow(0 0 5px #ffffff);
+    -ms-filter: drop-shadow(0 0 5px #ffffff);
+  }
+}
+@-o-keyframes neon {
+  from {
+    text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff;
+  }
+  to {
+    text-shadow: 0 0 5px #ffffff, 0 0 10px #ffffff;
+  }
+}
+@-o-keyframes neonsvg {
+  from {
+    filter: drop-shadow(0 0 10px #ffffff);
+    -webkit-filter: drop-shadow(0 0 10px #ffffff);
+    -moz-filter: drop-shadow(0 0 10px #ffffff);
+    -o-filter: drop-shadow(0 0 10px #ffffff);
+    -ms-filter: drop-shadow(0 0 10px #ffffff);
+  }
+  to {
+    filter: drop-shadow(0 0 5px #ffffff);
+    -webkit-filter: drop-shadow(0 0 5px #ffffff);
+    -moz-filter: drop-shadow(0 0 5px #ffffff);
+    -o-filter: drop-shadow(0 0 5px #ffffff);
+    -ms-filter: drop-shadow(0 0 5px #ffffff);
+  }
+}
+@-webkit-keyframes icon-nudge {
+  0% {
+    margin-left: -1rem;
+  }
+  50% {
+    margin-left: -0.6rem;
+  }
+  100% {
+    margin-left: -1rem;
   }
 }
