--- a/app/styles/less/navbar.less
+++ b/app/styles/less/navbar.less
@@ -1,4 +1,87 @@
 nav {
+	height: 2.5rem;
+	width: 100%;
+	background:rgba(0, 0, 0, 0.4);
+	position: fixed;
+	text-align:center;
+	z-index:1000;
+	ul {
+		padding: 0;
+		margin-top:0;
+		margin-bottom:0;
+	}
+	li {
+		display:inline;
+		border-right: 1px solid white;
+		&:last-child {
+			border-right:0;
+		}
+		a {
+			padding-left:4rem;
+			padding-right:4rem;
+			font-size:0.9em;
+			font-family:@primary-font-med;
+		}
+	}
+	a {
+		color: white;
+		display: inline-block;
+		text-align: center;
+		text-decoration: none;
+		line-height: 2.5rem;
+		-webkit-transition: background 0.2s;
+		transition: background 0.2s;
+		-moz-transition: background 0.2s;
+		-o-transition: background 0.2s;
+		-ms-transition: background 0.2s;
+		&:hover {
+			background:rgba(0, 0, 0, 0.4);
+		}
+		&:active {
+			background:rgba(0, 0, 0, 0.4);
+		}
+	}
+	#nav-toggle {
+		display: none;
+		height:2.5rem;
+		background:rgba(0, 0, 0, 0.3);
+		-webkit-transition: background 0.3s;
+		transition: background 0.3s;
+		-moz-transition: background 0.3s;
+		-o-transition: background 0.3s;
+		-ms-transition: background 0.3s;
+		&:hover {
+			background:rgba(0, 0, 0, 0.4);
+		}
+		.svg-icon-nav {
+			display: inline-block;
+			position: relative;
+			float:left;
+			max-width: 2rem;
+			max-height:2rem;
+			min-width:2rem;
+			min-height:2rem;
+			vertical-align: middle;
+			margin-left:-1rem;
+			margin-top:0.2rem;
+			&:hover {
+				.icon-nudge;
+			}
+		}
+		i {
+			float:right;
+			font-size:2em;
+			vertical-align:middle;
+			line-height:2.5rem;
+			margin-right:0.7rem;
+		}
+	}
+}
+
+
+/*
+
+nav {
 	height: 40px;
 	width: 100%;
 	background:rgba(0, 0, 0, 0.4);
@@ -36,89 +119,18 @@ nav li:last-child a {
 nav a:hover, nav a:active {
 	background:rgba(0, 0, 0, 0.4);
 }
-nav a#pull {
+nav a#nav-toggle {
 	display: none;
-	.svg-icon {
+	height:40px;
+	.svg-icon-nav {
 		display: inline-block;
 		position: relative;
+		float:left;
 		max-width: 2rem;
 		max-height:2rem;
 		vertical-align: middle;
-		margin-left:-2rem;
+		margin-left:-1rem;
+		margin-top:0.2rem;
 	}
 }
-
-/*Styles for screen 600px and lower*/
-@media screen and (max-width: 600px) {
-	nav { 
-  		height: auto;
-  	}
-  	nav ul {
-  		width: 100vw;
-  		display: block;
-  		height: auto;
-  	}
-  	nav li {
-  		width: 50%;
-  		float: left;
-  		position: relative;
-  	}
-  	nav li a {
-		//border-bottom: 1px solid #576979;
-		//border-right: 1px solid #576979;
-		border:0;
-		padding:0;
-	}
-  	nav a {
-	  	text-align: left;
-	  	width: 100%;
-	  	text-indent: 25px;
-  	}
-}
-
-@media only screen and (max-width : 480px) {
-	nav {
-		border-bottom: 0;
-		background:rgba(59, 61, 66, 0.9);
-	}
-	nav ul {
-		display: none;
-		height: auto;
-	}
-	nav li {
-		float:none;
-	}
-	nav li a {
-		width:85%;
-		margin-left:-1.5rem;
-		border-bottom:1px solid lightgrey;
-	}
-	nav a#pull {
-		display: block;
-		width: 100%;
-		position: fixed;
-	}
-	nav a#pull:after {
-		content:"";
-		background: url('https://www.neffheadwear.com/sites/all/themes/neff_foundation/images/svg-offcanvas-nav-icon.svg') no-repeat;
-		background-size:contain;
-		width: 30px;
-		height: 30px;
-		display: inline-block;
-		position: absolute;
-		right: 15px;
-		top: 10px;
-	}
-}
-
-/*Smartphone*/
-@media only screen and (max-width : 320px) {
-	nav li {
-		display: block;
-		float: none;
-		width: 100%;
-	}
-	nav li a {
-		border-bottom: 1px solid #576979;
-	}
-}
+*/
