--- a/app/styles/less/keyframes.less
+++ b/app/styles/less/keyframes.less
@@ -107,15 +107,47 @@
 
 // END NEON GLOW EFFECT -----------------------------
 
-
-@-webkit-keyframes icon-nudge {
+@-webkit-keyframes scrolldown {
   0% {
-    margin-left:-1rem;
+    margin-top:-1rem;
   }
   50% {
-    margin-left:-0.6rem;
+    margin-top:-1.2rem;
   }
   100% {
-    margin-left:-1rem;
+    margin-top:-1rem;
+  }
+}
+@keyframes scrolldown {
+  0% {
+    margin-top:-1rem;
+  }
+  50% {
+    margin-top:-1.2rem;
+  }
+  100% {
+    margin-top:-1rem;
+  }
+}
+@-moz-keyframes scrolldown {
+  0% {
+    margin-top:-1rem;
+  }
+  50% {
+    margin-top:-1.2rem;
+  }
+  100% {
+    margin-top:-1rem;
+  }
+}
+@-o-keyframes scrolldown {
+  0% {
+    margin-top:-1rem;
+  }
+  50% {
+    margin-top:-1.2rem;
+  }
+  100% {
+    margin-top:-1rem;
   }
 }
