--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -2,6 +2,8 @@
 @import "mixins";
 @import "navbar";
 @import "home-header";
+@import "home-what-we-do";
 @import "variables";
 @import "media-queries-navbar";
+@import "media-queries-home-header";
 @import "keyframes";
