--- a/app/styles/less/mixins.less
+++ b/app/styles/less/mixins.less
@@ -19,11 +19,11 @@
 	animation: neonsvg 1.1s ease-in-out infinite alternate; 
 }
 .icon-nudge {
-	-webkit-animation: icon-nudge 0.5s ease-in-out alternate;
-	-moz-animation: icon-nudge 0.5s ease-in-out alternate;
-	-o-animation: icon-nudge 0.5s ease-in-out alternate;
-	-ms-animation: icon-nudge 0.5s ease-in-out alternate;
-	animation: icon-nudge 0.5s ease-in-out alternate; 
+	-webkit-transition: margin-left 0.3s;
+	transition: margin-left 0.3s;
+	-moz-transition: margin-left 0.3s;
+	-o-transition: margin-left 0.3s;
+	-ms-transition: margin-left 0.3s;
 }
 .plug-rotate {
 	-webkit-transition-duration: 0.5s;
@@ -39,4 +39,11 @@
 	-webkit-transform:rotate(45deg);
     -moz-transform:rotate(45deg);
     -o-transform:rotate(45deg);
+}
+.scroll-down-animation {
+	-webkit-animation: scrolldown 0.8s ease-in-out infinite;
+	-moz-animation: scrolldown 0.8s ease-in-out infinite;
+	-o-animation: scrolldown 0.8s ease-in-out infinite;
+	-ms-animation: scrolldown 0.8s ease-in-out infinite;
+	animation: scrolldown 0.8s ease-in-out infinite; 
 }
