--- a/app/styles/less/navbar.less
+++ b/app/styles/less/navbar.less
@@ -64,8 +64,9 @@ nav {
 			vertical-align: middle;
 			margin-left:-1rem;
 			margin-top:0.2rem;
+			.icon-nudge;
 			&:hover {
-				.icon-nudge;
+				margin-left:-0.6rem;
 			}
 		}
 		i {
