--- a/app/styles/less/home-header.less
+++ b/app/styles/less/home-header.less
@@ -60,7 +60,7 @@ header {
 	position:absolute;
 	left:0;
 	top:7rem;
-	display:none;
+	//display:none;
 	.socket {
 		margin-left:2rem;
 	}
@@ -122,19 +122,14 @@ header {
 		margin:0 auto;
 		margin-top:-1rem;
 		text-align:center;
+		.scroll-down-animation;
 		i {
 			font-size:1.6em;
 			color:#2c3e50;
+
 		}
 	}
 }
 .header-spacer {
 	height:100vh;
-}
-section {
-	background-color:#ecf0f1;
-	color:black;
-	height:40rem;
-	padding:5rem;
-	text-align:center;
 }
