--- a/app/styles/less/home-what-we-do.less
+++ b/app/styles/less/home-what-we-do.less
@@ -3,6 +3,8 @@ section.what-we-do {
 	padding-left:3rem;
 	padding-right:3rem;
 	padding-bottom:3rem;
+	position:relative;
+	//z-index:-103;
 	.what-we-do-block {
 		margin-bottom:2rem;
 		margin-top:2rem;
