--- a/app/styles/less/mixins.less
+++ b/app/styles/less/mixins.less
@@ -25,7 +25,7 @@
 	-o-transition: margin-left 0.3s;
 	-ms-transition: margin-left 0.3s;
 }
-.plug-rotate {
+.plug-rotate, .icon-rotate {
 	-webkit-transition-duration: 0.5s;
 	-moz-transition-duration: 0.5s;
 	-o-transition-duration: 0.5s;
@@ -39,6 +39,11 @@
 	-webkit-transform:rotate(45deg);
     -moz-transform:rotate(45deg);
     -o-transform:rotate(45deg);
+}
+.icon-rotated {
+	-webkit-transform:rotate(180deg);
+    -moz-transform:rotate(180deg);
+    -o-transform:rotate(180deg);
 }
 .scroll-down-animation {
 	-webkit-animation: scrolldown 0.8s ease-in-out infinite;
