--- a/app/styles/less/home-header.less
+++ b/app/styles/less/home-header.less
@@ -147,6 +147,8 @@ header {
 	//top:-60rem;
 	//z-index:-102;
 	z-index:103;
+	//opacity:0;
+	//margin-top:-30rem;
 	.sticky;
 }
 
@@ -161,7 +163,7 @@ header {
 		.div-box {
 			height:10rem;
 			width:20rem;
-			background:green;
+			background:white;
 			margin:0 auto;
 			position:relative;
 		}
@@ -170,5 +172,5 @@ header {
 
 .sticky {
     position: fixed;
-    top:0;
+    top:-30rem;
 }
