--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -416,23 +416,43 @@ header .header-img {
   top: -30rem;
 }
 .test-section {
-  background: orange;
+  background: #3498db;
   color: white;
   width: 100%;
   padding: 5rem;
   font-size: 2em;
   position: relative;
 }
-.test-section .box .div-box {
-  height: 10rem;
-  width: 20rem;
-  background: white;
-  margin: 0 auto;
-  position: relative;
-}
 .sticky {
   position: fixed;
   top: -30rem;
+}
+.office-img {
+  background: url('../../images/office.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  z-index: 1000;
+  text-align: center;
+}
+.office-img .darken {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: black;
+  opacity: 0.4;
+  z-index: -1;
+}
+.office-img h3 {
+  color: white;
+  font-family: 'baufrabold';
+  text-transform: uppercase;
+  margin: 0;
+  font-size: 2.5em;
+  vertical-align: middle;
+  line-height: 100vh;
 }
 section.what-we-do {
   background-color: #ecf0f1;
@@ -561,6 +581,40 @@ section.what-we-do ul.what-we-do-list li {
     display: block;
     float: none;
     width: 100%;
+  }
+}
+@media screen and (min-width: 48rem) {
+  .header-text-and-logo .svg-icon {
+    display: inline-block;
+    position: relative;
+    width: 50%;
+    max-height: 10rem;
+    max-width: 10rem;
+    vertical-align: middle;
+    -webkit-transition-duration: 0.5s;
+    -moz-transition-duration: 0.5s;
+    -o-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+    -webkit-transition-property: -webkit-transform;
+    -moz-transition-property: -moz-transform;
+    -o-transition-property: -o-transform;
+    transition-property: transform;
+  }
+  .header-text-and-logo .header-text {
+    color: white;
+  }
+  .header-text-and-logo .header-text h1 {
+    font-size: 7em;
+    margin: 0;
+    font-family: 'coolvetica_rgregular';
+    font-weight: normal;
+  }
+  .header-text-and-logo .header-text p.tagline {
+    text-transform: uppercase;
+    font-family: 'baufraregular';
+    font-size: 1.4em;
+    margin: 0;
+    padding-top: 0.4rem;
   }
 }
 @-webkit-keyframes neon {
