--- a/app/styles/less/home-header.less
+++ b/app/styles/less/home-header.less
@@ -153,24 +153,44 @@ header {
 }
 
 .test-section {
-	background:orange;
+	background:#3498db;
 	color:white;
 	width:100%;
 	padding:5rem;
 	font-size:2em;
 	position:relative;
-	.box {
-		.div-box {
-			height:10rem;
-			width:20rem;
-			background:white;
-			margin:0 auto;
-			position:relative;
-		}
-	}
 }
 
 .sticky {
     position: fixed;
     top:-30rem;
+}
+
+
+.office-img {
+	background:url('../../images/office.jpg');
+	background-size:cover;
+	background-position:center;
+	width:100%;
+	height:100vh;
+	position:relative;
+	z-index:1000;
+	text-align:center;
+	.darken {
+		width:100%;
+		height:100%;
+		position:absolute;
+		background-color:black;
+		opacity:0.4;
+		z-index:-1;
+	}
+	h3 {
+		color:white;
+		font-family:@primary-font-bold;
+		text-transform:uppercase;
+		margin:0;
+		font-size:2.5em;
+		vertical-align:middle;
+		line-height:100vh;
+	}
 }
