--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -415,13 +415,42 @@ header .header-img {
   position: fixed;
   top: -30rem;
 }
-.test-section {
+.process {
   background: #3498db;
   color: white;
   width: 100%;
   padding: 5rem;
-  font-size: 2em;
+  font-size: 1.3em;
   position: relative;
+}
+.process .clearfix {
+  margin-top: 4rem;
+}
+.process .clearfix .box {
+  width: 30%;
+  height: 10rem;
+  border: 2px solid white;
+  margin: 0 auto;
+}
+.process .clearfix .box p {
+  font-family: 'baufraregular';
+}
+.process .clearfix .column.half {
+  text-align: center;
+}
+.process .clearfix .column.half p {
+  padding-right: 5rem;
+  font-family: 'baufraregular';
+}
+.process .clearfix .column.half.flow-opposite p {
+  padding-left: 5rem;
+  padding-right: 0;
+}
+.process i {
+  border: 2px solid white;
+  padding: .5em;
+  border-radius: 50%;
+  font-size: 2.5em;
 }
 .sticky {
   position: fixed;
@@ -451,8 +480,31 @@ header .header-img {
   text-transform: uppercase;
   margin: 0;
   font-size: 2.5em;
+}
+.office-img button {
+  color: white;
+  font-family: 'baufraregular';
+  font-size: 1.4em;
+  text-transform: uppercase;
+  width: 15rem;
+  height: 5rem;
+  border: 1px solid white;
+  background: none;
+  margin-top: 3rem;
+}
+.display-none {
+  display: none;
+}
+.v-align:after {
+  display: inline-block;
+  height: 100%;
+  width: 0;
   vertical-align: middle;
-  line-height: 100vh;
+  content: '';
+}
+.v-align > .v-aligned {
+  display: inline-block;
+  vertical-align: middle;
 }
 section.what-we-do {
   background-color: #ecf0f1;
