--- a/app/styles/less/home-header.less
+++ b/app/styles/less/home-header.less
@@ -152,13 +152,44 @@ header {
 	.sticky;
 }
 
-.test-section {
+.process {
 	background:#3498db;
 	color:white;
 	width:100%;
 	padding:5rem;
-	font-size:2em;
+	font-size:1.3em;
 	position:relative;
+	.clearfix {
+		margin-top:4rem;
+		.box {
+			width:30%;
+			height:10rem;
+			border:2px solid white;
+			margin:0 auto;
+			p {
+				font-family:@primary-font-reg;
+			}
+		}
+		.column.half {
+			text-align:center;
+			p {
+				padding-right:5rem;
+				font-family:@primary-font-reg;
+			}
+			&.flow-opposite {
+				p {
+					padding-left:5rem;
+					padding-right:0;
+				}
+			}
+		}
+	}
+	i {
+		border: 2px solid white;
+		padding:.5em;
+		border-radius:50%;
+		font-size:2.5em;
+	}
 }
 
 .sticky {
@@ -190,7 +221,33 @@ header {
 		text-transform:uppercase;
 		margin:0;
 		font-size:2.5em;
-		vertical-align:middle;
-		line-height:100vh;
+		//vertical-align:middle;
+		//line-height:100vh;
 	}
+	button {
+		color:white;
+		font-family:@primary-font-reg;
+		font-size:1.4em;
+		text-transform:uppercase;
+		width:15rem;
+		height:5rem;
+		border:1px solid white;
+		background:none;
+		margin-top:3rem;
+	}
+}
+.display-none {
+	display:none;
+}
+.v-align:after {
+    display: inline-block;
+    height: 100%;
+    width: 0;
+    vertical-align: middle;
+    content: '';
+}
+.v-align > .v-aligned {
+    display: inline-block;
+    vertical-align: middle;
+    //text-align: left;
 }
