--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -3,6 +3,9 @@
 @import "navbar";
 @import "home-header";
 @import "home-what-we-do";
+@import "home-process";
+@import "about-header";
+@import "about-about-us";
 @import "variables";
 @import "media-queries-navbar";
 @import "media-queries-home-header";
