--- a/app/styles/less/media-queries-home-header.less
+++ b/app/styles/less/media-queries-home-header.less
@@ -10,7 +10,7 @@
 			//overflow: hidden;
 			.icon-rotate;
 		}
-		.header-text {
+		.home-header-text {
 			color:white;
 			h1 {
 				font-size:7em;
