--- a/app/styles/less/mixins.less
+++ b/app/styles/less/mixins.less
@@ -4,6 +4,21 @@
 .text-center {
 	text-align:center;
 }
+.display-none {
+	display:none;
+}
+.v-align:after {
+    display: inline-block;
+    height: 100%;
+    width: 0;
+    vertical-align: middle;
+    content: '';
+}
+.v-align > .v-aligned {
+    display: inline-block;
+    vertical-align: middle;
+    //text-align: left;
+}
 .neon {
 	-webkit-animation: neon 1.5s ease-in-out infinite alternate;
 	-moz-animation: neon 1.5s ease-in-out infinite alternate;
