--- a/app/styles/less/navbar.less
+++ b/app/styles/less/navbar.less
@@ -5,12 +5,24 @@ nav {
 	position: fixed;
 	text-align:center;
 	z-index:1000;
+	/*&.nav-reduced {
+		height:2.5rem;
+		a {
+			line-height:2.5rem;
+			height:2.5rem;
+		}
+	}*/
 	ul {
 		padding: 0;
 		margin-top:0;
 		margin-bottom:0;
 	}
 	li {
+		&.nav-active {
+			a {
+				background-color:rgba(0, 0, 0, 0.1);
+			}
+		}
 		display:inline;
 		border-right: 1px solid white;
 		&:last-child {
