--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -505,14 +505,8 @@ section.what-we-do ul.what-we-do-list li {
 .process .clearfix:last-child {
   margin-bottom: 5rem;
 }
-.process .clearfix .box {
-  width: 30%;
-  height: 10rem;
-  border: 2px solid white;
-  margin: 0 auto;
-}
-.process .clearfix .box p {
-  font-family: 'baufraregular';
+.process .clearfix:nth-child(2) {
+  margin-bottom: 25rem;
 }
 .process .clearfix .column.half {
   text-align: center;
@@ -530,6 +524,22 @@ section.what-we-do ul.what-we-do-list li {
   padding: .5em;
   border-radius: 50%;
   font-size: 2.5em;
+}
+.box-container {
+  position: absolute;
+  z-index: 1000;
+  width: 100%;
+  top: 80rem;
+}
+.box-container .box {
+  width: 30%;
+  height: 10rem;
+  background: white;
+  margin: 0 auto;
+  border-radius: 4px;
+}
+.box-container .box p {
+  font-family: 'baufraregular';
 }
 .sticky {
   position: fixed;
@@ -567,7 +577,7 @@ section.what-we-do ul.what-we-do-list li {
   text-transform: uppercase;
   width: 15rem;
   height: 5rem;
-  border: 1px solid white;
+  border: 2px solid white;
   background: none;
   margin-top: 3rem;
 }
