--- a/app/styles/less/home-process.less
+++ b/app/styles/less/home-process.less
@@ -96,7 +96,7 @@
 	}
 	button {
 		color:white;
-		font-family:@primary-font-reg;
+		font-family:@primary-font-bold;
 		font-size:1.4em;
 		text-transform:uppercase;
 		width:15rem;
