--- a/app/styles/less/home-header.less
+++ b/app/styles/less/home-header.less
@@ -56,8 +56,9 @@ header.home-header {
 		p.tagline {
 			text-transform:uppercase;
 			font-family:@primary-font-reg;
-			margin:0;
-			padding-top:0.4rem;
+			font-size:1.2em;
+			margin-top:-1.4rem;
+			margin-left:12.2rem;
 		}
 	}
 }
