--- a/app/styles/less/media-queries-home-header.less
+++ b/app/styles/less/media-queries-home-header.less
@@ -1,29 +1,16 @@
 @media screen and (min-width: 48rem) {
 	.header-text-and-logo {
 		.svg-icon {
-			display: inline-block;
-			position: relative;
 			width: 50%;
 			max-height:10rem;
 			max-width:10rem;
-			vertical-align: middle;
-			//overflow: hidden;
-			.icon-rotate;
 		}
 		.home-header-text {
-			color:white;
 			h1 {
 				font-size:7em;
-				margin:0;
-				font-family:@logo-font;
-				font-weight:normal;
 			}
 			p.tagline {
-				text-transform:uppercase;
-				font-family:@primary-font-reg;
-				font-size:1.4em;
-				margin:0;
-				padding-top:0.4rem;
+				//font-size:1.2em;
 			}
 		}
 	}
