--- a/app/styles/less/variables.less
+++ b/app/styles/less/variables.less
@@ -4,7 +4,7 @@
 @primary-font-med: 'bauframedium';
 @primary-font-bold: 'baufrabold';
 
-@secondary-font: 'bulolight';
+@secondary-font: 'cabrito_norm_regularnormRg';
 
 @home-header-bg-color: rgba(231, 76, 60, 0.93);
 @mobile-nav-bg-color: rgba(59, 61, 74, 1);
