--- a/app/styles/fonts/fonts.css
+++ b/app/styles/fonts/fonts.css
@@ -14,7 +14,6 @@
 
 }
 
-
 @font-face {
     font-family: 'baufrabold';
     src: url('baufra-bold-webfont.eot');
@@ -26,9 +25,6 @@
     font-style: normal;
 
 }
-
-
-
 
 @font-face {
     font-family: 'bauframedium';
@@ -57,14 +53,13 @@
 
 }
 
-
 @font-face {
-    font-family: 'bulolight';
-    src: url('bulolight-webfont.eot');
-    src: url('bulolight-webfont.eot?#iefix') format('embedded-opentype'),
-         url('bulolight-webfont.woff') format('woff'),
-         url('bulolight-webfont.ttf') format('truetype'),
-         url('bulolight-webfont.svg#bulolight') format('svg');
+    font-family: 'cabrito_norm_regularnormRg';
+    src: url('insigne_-_cabrito-norreg-webfont.eot');
+    src: url('insigne_-_cabrito-norreg-webfont.eot?#iefix') format('embedded-opentype'),
+         url('insigne_-_cabrito-norreg-webfont.woff') format('woff'),
+         url('insigne_-_cabrito-norreg-webfont.ttf') format('truetype'),
+         url('insigne_-_cabrito-norreg-webfont.svg#cabrito_norm_regularnormRg') format('svg');
     font-weight: normal;
     font-style: normal;
 
