--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -6,6 +6,7 @@
 @import "home-process";
 @import "about-header";
 @import "about-about-us";
+@import "case-studies";
 @import "variables";
 @import "media-queries-navbar";
 @import "media-queries-home-header";
