added homepage blocks, fixed process animation, added scroll function to arrow

--- a/app/styles/less/variables.less
+++ b/app/styles/less/variables.less
@@ -8,3 +8,6 @@
 
 @home-header-bg-color: rgba(231, 76, 60, 0.93);
 @mobile-nav-bg-color: rgba(59, 61, 74, 1);
+
+@primary-color: #e74c3c;
+@secondary-color: #3498db;
