--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -506,8 +506,8 @@ section.what-we-do ul.what-we-do-list li {
 .process .clearfix:last-child {
   margin-bottom: 5rem;
 }
-.process .clearfix:nth-child(2) {
-  margin-bottom: 25rem;
+.process .clearfix:nth-child(3) {
+  margin-bottom: 30rem;
 }
 .process .clearfix .column.half {
   text-align: center;
@@ -526,61 +526,28 @@ section.what-we-do ul.what-we-do-list li {
   border-radius: 50%;
   font-size: 2.5em;
 }
-.box-container {
+.how-do-we {
   position: absolute;
-  z-index: 1000;
+  z-index: 999;
   width: 100%;
-  top: 80rem;
+  top: 100rem;
+  color: white;
 }
-.box-container .box {
+.how-do-we .box {
   width: 30%;
-  height: 10rem;
-  background: white;
+  background: #3498db;
   margin: 0 auto;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   border-radius: 4px;
-}
-.box-container .box p {
-  font-family: 'baufraregular';
-}
-.sticky {
-  position: fixed;
-  top: -30rem;
-}
-.office-img {
-  background: url('../../images/office.jpg');
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  z-index: 103;
-  text-align: center;
-}
-.office-img .darken {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-color: black;
-  opacity: 1;
-  z-index: -1;
-}
-.office-img h3 {
-  color: white;
-  font-family: 'baufrabold';
-  text-transform: uppercase;
-  margin: 0;
-  font-size: 2.5em;
-}
-.office-img button {
-  color: white;
-  font-family: 'baufrabold';
-  font-size: 1.4em;
-  text-transform: uppercase;
-  width: 15rem;
-  height: 5rem;
   border: 2px solid white;
-  background: none;
-  margin-top: 3rem;
+}
+.how-do-we .box p {
+  font-family: 'baufraregular';
+  margin-bottom: 0;
+}
+.how-do-we i {
+  font-size: 8em;
 }
 .ribbon {
   width: 70%;
@@ -636,7 +603,186 @@ section.what-we-do ul.what-we-do-list li {
   position: relative;
   z-index: 104;
   margin-top: 10rem;
-  margin-bottom: 15rem;
+  margin-bottom: 10rem;
+}
+.sticky {
+  position: fixed;
+  top: -30rem;
+}
+.office-img {
+  background: url('../../images/office.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  z-index: 103;
+  text-align: center;
+}
+.office-img .darken {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: black;
+  opacity: 1;
+  z-index: -1;
+}
+.office-img h3 {
+  color: white;
+  font-family: 'baufrabold';
+  text-transform: uppercase;
+  margin: 0;
+  font-size: 2.5em;
+}
+section.home-blocks {
+  position: relative;
+}
+section.home-blocks .block-swarm-tactics {
+  background: white;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+section.home-blocks .block-swarm-tactics .column {
+  height: 100%;
+}
+section.home-blocks .block-swarm-tactics .title-and-text {
+  color: #e74c3c;
+}
+section.home-blocks .block-swarm-tactics .title-and-text h3 {
+  font-family: 'baufraregular';
+  font-size: 3em;
+  margin-bottom: 1rem;
+  margin-top: 0;
+}
+section.home-blocks .block-swarm-tactics .title-and-text hr {
+  width: 20%;
+  border: 1px solid #e74c3c;
+  margin-bottom: 3rem;
+}
+section.home-blocks .block-swarm-tactics .title-and-text p {
+  font-family: 'cabrito_norm_regularnormRg';
+  font-size: 1.2em;
+}
+section.home-blocks .block-swarm-tactics .title-and-text button {
+  color: #e74c3c;
+  font-family: 'baufrabold';
+  font-size: 1.4em;
+  text-transform: uppercase;
+  width: 15rem;
+  height: 5rem;
+  border: 2px solid #e74c3c;
+  background: none;
+  margin-top: 2rem;
+}
+section.home-blocks .block-swarm-tactics .title-and-text button:hover {
+  background: #e74c3c;
+  border-color: white;
+  color: white;
+}
+section.home-blocks .block-bombarded {
+  background: white;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  color: #e74c3c;
+}
+section.home-blocks .block-bombarded .column {
+  height: 100%;
+}
+section.home-blocks .block-bombarded .text-and-button p {
+  font-family: 'cabrito_norm_regularnormRg';
+  font-size: 1.5em;
+}
+section.home-blocks .block-bombarded .text-and-button p:nth-child(2) {
+  font-size: 2em;
+}
+section.home-blocks .block-bombarded .text-and-button button {
+  color: #e74c3c;
+  font-family: 'baufrabold';
+  font-size: 1.4em;
+  text-transform: uppercase;
+  width: 15rem;
+  height: 5rem;
+  border: 2px solid #e74c3c;
+  background: none;
+  margin-top: 2rem;
+}
+section.home-blocks .block-bombarded .text-and-button button:hover {
+  background: #e74c3c;
+  border-color: white;
+  color: white;
+}
+section.home-blocks .block-collaboration {
+  background: url('../../images/pen.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+section.home-blocks .block-collaboration .column {
+  height: 100%;
+}
+section.home-blocks .block-collaboration .collab-darken {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: black;
+  opacity: 0.5;
+  z-index: -1;
+}
+section.home-blocks .block-collaboration .text-and-button p {
+  color: white;
+  font-family: 'cabrito_norm_regularnormRg';
+  font-size: 2em;
+}
+section.home-blocks .block-collaboration .text-and-button button {
+  color: white;
+  font-family: 'baufrabold';
+  font-size: 1.4em;
+  text-transform: uppercase;
+  width: 15rem;
+  height: 5rem;
+  border: 2px solid white;
+  background: none;
+}
+section.home-blocks .block-collaboration .text-and-button button:hover {
+  background: white;
+  border-color: white;
+  color: #e74c3c;
+}
+section.home-blocks .block-contact {
+  background: #e74c3c;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  color: white;
+}
+section.home-blocks .block-contact .column {
+  height: 100%;
+}
+section.home-blocks .block-contact .text-and-button p,
+section.home-blocks .block-contact .text-and-button button {
+  display: inline;
+}
+section.home-blocks .block-contact .text-and-button p {
+  font-family: 'baufraregular';
+  font-size: 1.5em;
+  text-transform: uppercase;
+}
+section.home-blocks .block-contact .text-and-button button {
+  color: white;
+  font-family: 'baufrabold';
+  font-size: 1.4em;
+  text-transform: uppercase;
+  width: 15rem;
+  height: 4rem;
+  border: 2px solid white;
+  background: none;
+  margin-left: 2rem;
+}
+section.home-blocks .block-contact .text-and-button button:hover {
+  background: white;
+  border-color: #e74c3c;
+  color: #e74c3c;
 }
 header.about-header {
   z-index: -1;
@@ -1017,6 +1163,14 @@ section.bl-expand .bl-icon-close {
   .bl-content > ul li {
     width: 40%;
   }
+}
+section.footer {
+  height: 20rem;
+  background: white;
+}
+section.footer p {
+  margin: 0;
+  padding: 5rem;
 }
 @media screen and (min-width: 48rem) {
   nav {
