--- a/app/styles/less/home-process.less
+++ b/app/styles/less/home-process.less
@@ -22,8 +22,8 @@
 		&:last-child {
 			margin-bottom:5rem;
 		}
-		&:nth-child(2) {
-			margin-bottom:25rem;
+		&:nth-child(3) {
+			margin-bottom:30rem;
 		}
 		.column.half {
 			text-align:center;
@@ -46,67 +46,31 @@
 		font-size:2.5em;
 	}
 }
-.box-container {
+.how-do-we {
 	position:absolute;
-	z-index:1000;
+	z-index:999;
 	width:100%;
-	top:80rem;
+	top:100rem;
+	color:white;
 	.box {
 		width:30%;
-		height:10rem;
-		background:white;
+		//height:10rem;
+		background:@secondary-color;
 		margin:0 auto;
+		padding-top:2rem;
+		padding-bottom:2rem;
 		border-radius:4px;
+		border:2px solid white;
 		p {
 			font-family:@primary-font-reg;
+			margin-bottom:0;
 		}
 	}
-}
-.sticky {
-    position: fixed;
-    top:-30rem;
+	i {
+		font-size:8em;
+	}
 }
 
-
-.office-img {
-	background:url('../../images/office.jpg');
-	background-size:cover;
-	background-position:center;
-	width:100%;
-	height:100vh;
-	position:relative;
-	z-index:103;
-	text-align:center;
-	.darken {
-		width:100%;
-		height:100%;
-		position:absolute;
-		background-color:black;
-		opacity:1;
-		z-index:-1;
-	}
-	h3 {
-		color:white;
-		font-family:@primary-font-bold;
-		text-transform:uppercase;
-		margin:0;
-		font-size:2.5em;
-		//vertical-align:middle;
-		//line-height:100vh;
-	}
-	button {
-		color:white;
-		font-family:@primary-font-bold;
-		font-size:1.4em;
-		text-transform:uppercase;
-		width:15rem;
-		height:5rem;
-		border:2px solid white;
-		background:none;
-		margin-top:3rem;
-	}
-}
- 
 // 'Our Process' Ribbon 
 
 .ribbon {
@@ -162,5 +126,40 @@
     position: relative;
     z-index: 104;
     margin-top:10rem;
-    margin-bottom:15rem;
+    margin-bottom:10rem;
+}
+/////////////////
+
+.sticky {
+    position: fixed;
+    top:-30rem;
+}
+
+
+.office-img {
+	background:url('../../images/office.jpg');
+	background-size:cover;
+	background-position:center;
+	width:100%;
+	height:100vh;
+	position:relative;
+	z-index:103;
+	text-align:center;
+	.darken {
+		width:100%;
+		height:100%;
+		position:absolute;
+		background-color:black;
+		opacity:1;
+		z-index:-1;
+	}
+	h3 {
+		color:white;
+		font-family:@primary-font-bold;
+		text-transform:uppercase;
+		margin:0;
+		font-size:2.5em;
+		//vertical-align:middle;
+		//line-height:100vh;
+	}
 }
