--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -4,9 +4,11 @@
 @import "home-header";
 @import "home-what-we-do";
 @import "home-process";
+@import "home-blocks";
 @import "about-header";
 @import "about-about-us";
 @import "case-studies";
+@import "footer";
 @import "variables";
 @import "media-queries-navbar";
 @import "media-queries-home-header";
